2010-01-20  Simon Fraser  <simon.fraser@apple.com>

        Reviewed by Dave Hyatt.

        Hit testing on composited plugins is broken
        https://bugs.webkit.org/show_bug.cgi?id=33927
        <rdar://problem/7559069>

        Testcase for hit testing on a fixed-position plugin after scrolling.
        
        * plugins/mouse-events-fixedpos-expected.txt: Added.
        * plugins/mouse-events-fixedpos.html: Added.

2010-01-21  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] add setDomainRelaxationForbiddenForURLScheme in Qt DRT
        https://bugs.webkit.org/show_bug.cgi?id=33945

        * platform/qt/Skipped:

2010-01-21  Philippe Normand  <pnormand@igalia.com>

        Rubber-stamped by Eric Carlson.

        Start the test when the video element loads, which is less prone
        to occasional cases where document.load is fired after video.load.

        * media/video-source-error-no-candidate.html:
        * media/video-source-error-no-candidate-expected.txt:

2010-01-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler.

        Intermittent crash when media element is adopted by another document
        https://bugs.webkit.org/show_bug.cgi?id=33919
        rdar://problem/7557527

        This test does not always crash the un-patched version of WebKit because
        the crash is so timing-dependant.

        * media/adopt-node-crash-expected.txt: Added.
        * media/adopt-node-crash.html: Added.

2010-01-21  Simon Hausmann  <simon.hausmann@nokia.com>

        No review, rolling out 53615 as it causes two
        crashes on the bot.

        * platform/qt/Skipped:

2010-01-21  Robert Hogan  <robert@roberthogan.net>

        Reviewed by Simon Hausmann.

        Qt DRT: respect window.close() and window.closed()

        Qt DRT needs to maintain a correct count of open windows
        for windowCount(). It also needs to delete windows that