@@ -2084,9 +2084,8 @@ int GraphicsContext3D::texSubImage2D(unsigned target,
                                      unsigned type,
                                      void* pixels)
 {
-    // FIXME: implement.
-    notImplemented();
-    return -1;
+    glTexSubImage2D(target, level, xoffset, yoffset, width, height, format, type, pixels);
+    return 0;
 }
 
 int GraphicsContext3D::texSubImage2D(unsigned target,
