@@ -1,3 +1,13 @@
+2010-01-21  Kenneth Russell  <kbr@google.com>
+
+        Reviewed by Oliver Hunt.
+
+        [Chromium] Implement texSubImage2D taking WebGLArray
+        https://bugs.webkit.org/show_bug.cgi?id=33932
+
+        * fast/canvas/webgl/tex-sub-image-2d-expected.txt: Added.
+        * fast/canvas/webgl/tex-sub-image-2d.html: Added.
+
 2010-01-20  Simon Fraser  <simon.fraser@apple.com>
 
         Reviewed by Dave Hyatt.
